cli/tests/snapshots/help__balance_start.snap
---
source: cli/tests/help.rs
expression: "help(&[\"balance\", \"start\"])"
---
Balance chunks across the devices

Balance and/or convert (change allocation profile of) chunks that passed all
filters in a comma-separated list of filters for a particular chunk type.  If
filter list is not given balance all chunks of that type.  In case none of the
-d, -m or -s options is given balance all chunks in a filesystem. This is
potentially long operation and the user is warned before this start, with a
delay to stop it.

Usage: start [OPTIONS] <PATH>

Arguments:
  <PATH>
          

Options:
  -d, --data-filters <DATA_FILTERS>
          Act on data chunks with optional filters

  -m, --metadata-filters <METADATA_FILTERS>
          Act on metadata chunks with optional filters

  -s, --system-filters <SYSTEM_FILTERS>
          Act on system chunks (requires force) with optional filters

  -f, --force
          Force a reduction of metadata integrity, or skip timeout when
          converting to RAID56 profiles

      --full-balance
          Do not print warning and do not delay start

  -b, --background
          Run the balance as a background process

      --enqueue
          Wait if there's another exclusive operation running, otherwise
          continue

  -h, --help
          Print help (see a summary with '-h')
