cli/tests/snapshots/help__btrfs_balance_cancel.snap
---
source: cli/tests/help.rs
expression: text
---
Cancel a running balance operation

Usage: cancel <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
