cli/tests/snapshots/help__btrfs_balance_pause.snap
---
source: cli/tests/help.rs
expression: text
---
Pause a running balance operation

Usage: pause <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
