cli/tests/snapshots/help__btrfs_balance_resume.snap
---
source: cli/tests/help.rs
expression: text
---
Resume a paused balance operation

Usage: resume <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
