cli/tests/snapshots/help__btrfs_balance_status.snap
---
source: cli/tests/help.rs
expression: text
---
Show status of running or paused balance operation

Usage: status <PATH>

Arguments:
  <PATH>
          

Options:
  -h, --help
          Print help
